# telecom

./: .gitignore  __init__.py  alembic.ini  config.ini  db.py  docker-compose.yml  pyproject.toml  schema.py  server.py  test.py
alembic/: env.py
alembic/versions/: 09b851043f70_added_tables.py
controllers/: database.py  validadator.py
models/: equipments.py  schema.py
